[package]
name = "serde_json_test"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_orjson = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_orjson/std"]
alloc = ["serde_orjson/alloc"]
preserve_order = ["serde_orjson/preserve_order"]
arbitrary_precision = ["serde_orjson/arbitrary_precision"]
raw_value = ["serde_orjson/raw_value"]
unbounded_depth = ["serde_orjson/unbounded_depth"]
